# cualgo

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  setup.py
.github/workflows/: python-app.yml
include/cualgo_backends/: common.hpp  cuda_exception.cuh  malloc_helper.cuh  malloc_helper.hpp
include/cualgo_backends/graph/: floydwarshall.cuh  floydwarshall.hpp
src/cualgo/: CMakeLists.txt  cualgo.cu  main.cu
test/: CMakeLists.txt
tests/: CMakeLists.txt
tests/graph_tests/: test_floydwarshall.py
